--- a/css/style.css
+++ b/css/style.css
@@ -589,7 +589,10 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 24px;
+}
+
+.footer-subscribe-field-wrapper {
+  margin-right: 24px;
 }
 
 .footer-subscribe-input {
@@ -599,10 +602,10 @@ img {
   border: 1px solid var(--secondary-color-light-theme);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  background-color: var(--primary-color-dark-theme);
+  background-color: transparent;
   font-weight: 400;
   font-size: 12px;
-  line-height: 2;
+  line-height: 1.5;
   letter-spacing: 0.04em;
   color: var(--secondary-color-light-theme);
 }
@@ -660,13 +663,13 @@ img {
 }
 
 .modal {
+  padding: 72px 24px 24px 24px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 408px;
   min-height: 584px;
-  padding: 24px;
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -676,7 +679,6 @@ img {
 
 .modal-title {
   margin-bottom: 16px;
-  margin-top: 48px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
