--- a/css/style.css
+++ b/css/style.css
@@ -799,8 +799,8 @@ img {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
   fill: transparent;
-  transition: fill var(--transition-param), border var(--transition-param),
-    background-color var(--transition-param), border-color var(--transition-param);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-form-checkbox:checked + .contact-form-checkbox-name > .contact-form-checkbox-own {
